This is 100% going to break this

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Me - Software Developer | Web Developer">
     <title>About - Libby Griffiths</title>
+    <link rel="stylesheet" href="assets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -34,165 +35,6 @@
             </ul>
         </section>
     </div>
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', sans-serif;
-        }
-
-        body {
-            background: #fafafa;
-            color: #333;
-            /*padding-top: 80px;  Adjusted padding to account for the fixed navbar */
-            overflow-y: scroll; /* Ensures scrollbar appears when needed */
-        }
-
-        .navigation {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            margin-bottom: 20px;
-        }
-
-        .navigation a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            font-size: 1.2rem;
-            transition: color 0.3s ease;
-        }
-
-        .navigation a:hover {
-            color: #75975e;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            height: 100vh;
-            justify-content: center;
-            text-align: center;
-        }
-
-        .about-title {
-            font-size: 3rem;
-            font-family: 'Pacifico', cursive;
-            color: #75975e;
-            margin-bottom: 20px;
-        }
-
-        .about-text {
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-            max-width: 800px;
-            line-height: 1.6;
-            text-align: center;
-            margin: 0 auto;
-            padding-bottom: 30px;
-        }
-
-        .highlight {
-            font-weight: bold;
-            color: #75975e;
-        }
-
-        .btn {
-            text-decoration: none;
-            margin-top: 40px;
-            background: #75975e;
-            color: white;
-            padding: 12px 25px;
-            border-radius: 30px;
-            font-size: 1.2rem;
-            transition: background 0.3s ease;
-        }
-
-        .btn:hover {
-            background: #c7DDB5;
-        }
-
-        .skills-title {
-            font-size: 2rem;
-            margin-top: 30px;
-            font-weight: bold;
-        }
-
-        .skills-list {
-            list-style: none;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 20px;
-        }
-
-        .skills-list li {
-            background: #75975e;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 20px;
-            font-size: 1rem;
-            font-weight: 500;
-            transition: transform 0.3s ease;
-        }
-
-        .skills-list li:hover {
-            transform: scale(1.1);
-            background: #c7DDB5;
-        }
-
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeIn 1s forwards ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @media (max-width: 768px) {
-
-            body {
-            background: #fafafa;
-            color: #333;
-            padding-top: 20px; /* Adjusted padding to account for the fixed navbar */
-            }
-            .about-title {
-                font-size: 2.5rem;
-            }
-
-            .about-text {
-                font-size: 1rem;
-            }
-
-            .btn {
-                font-size: 1rem;
-                padding: 10px 20px;
-            }
-        }
-
-        /* Invisible scrollbar styling */
-        ::-webkit-scrollbar {
-            width: 0px;
-            background: transparent;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: transparent;
-        }
-    </style>
 </body>
 </html>
 
