--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Me - Software Developer | Web Developer">
-    <title>Contact - Your Name</title>
+    <title>Contact - Libby Griffiths</title>
+    <link rel="stylesheet" href="assets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -30,136 +31,5 @@
             <a href="mailto:libbygriffiths00@gmail.com" class="btn">Send me an Email</a>
         </section>
     </div>
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', sans-serif;
-        }
-        body {
-            background: #fafafa;
-            color: #333;
-        }
-
-        .navigation {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            margin-bottom: 20px;
-        }
-
-        .navigation a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            font-size: 1.2rem;
-            transition: color 0.3s ease;
-        }
-
-        .navigation a:hover {
-            color: #75975e;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            height: auto; /* Allow content to flow properly */
-            justify-content: flex-start;
-            text-align: center;
-            padding: 40px;
-        }
-
-        .contact-title {
-            font-size: 3rem;
-            font-family: 'Pacifico', cursive;
-            color: #75975e;
-            margin-bottom: 20px;
-        }
-
-        .contact-text {
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-            max-width: 800px;
-            line-height: 1.6;
-            text-align: center;
-            margin: 0 auto;
-            padding-bottom: 30px;
-        }
-
-        .contact-subtitle {
-            font-size: 2rem;
-            margin-top: 30px;
-            font-weight: bold;
-            padding-bottom: 15px;
-        }
-
-        .contact-info {
-            padding: 20px 30px; /* Added padding around contact info */
-            background-color: #f1f1f1;
-            border-radius: 10px;
-            margin-bottom: 40px; /* Space between contact info and the button */
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-            text-align: left;
-        }
-
-        .contact-link {
-            color: #75975e;
-            text-decoration: none;
-        }
-
-        .contact-link:hover {
-            text-decoration: underline;
-        }
-
-        .btn {
-            text-decoration: none;
-            margin-top: 40px; /* Increased margin-top to separate button from text */
-            background: #75975e;
-            color: white;
-            padding: 12px 25px;
-            border-radius: 30px;
-            font-size: 1.2rem;
-            transition: background 0.3s ease;
-        }
-
-        .btn:hover {
-            background: #c7DDB5;
-        }
-
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeIn 1s forwards ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @media (max-width: 768px) {
-            .contact-title {
-                font-size: 2.5rem;
-            }
-            .contact-text {
-                font-size: 1rem;
-            }
-            .btn {
-                font-size: 1rem;
-                padding: 10px 20px;
-            }
-        }
-    </style>
 </body>
 </html>
