--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio - Software Developer | Web Developer">
     <title>Portfolio - Libby Griffiths</title>
+    <link rel="stylesheet" href="assets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -43,171 +44,6 @@
             </div>
         </section>
     </div>
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', sans-serif;
-        }
-
-        body {
-            background: #fafafa;
-            color: #333;
-            padding-top: 80px; /* Adjusted padding to account for the fixed navbar */
-            overflow-y: scroll; /* Ensures scrollbar appears when needed */
-        }
-
-        .navigation {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            margin-bottom: 20px;
-        }
-
-        .navigation a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            font-size: 1.2rem;
-            transition: color 0.3s ease;
-        }
-
-        .navigation a:hover {
-            color: #75975e;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh; /* Ensures the content fills at least the height of the viewport */
-            justify-content: flex-start;
-            text-align: center;
-            padding: 40px;
-        }
-
-        .portfolio-title {
-            font-size: 3rem;
-            font-family: 'Pacifico', cursive;
-            color: #75975e;
-            margin-bottom: 20px;
-        }
-
-        .portfolio-text {
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-            max-width: 800px;
-            line-height: 1.6;
-            padding-bottom: 30px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 40px; /* Increased gap for better spacing */
-            margin-top: 40px;
-            width: 100%;
-        }
-
-        .project-card {
-            background: white;
-            padding: 30px; /* Increased padding for more spacing */
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-            text-align: left; /* Align text properly inside the card */
-        }
-
-        .project-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .project-card img {
-            width: 100%;
-            border-radius: 10px;
-            margin-bottom: 15px;
-        }
-
-        .project-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-        }
-
-        .project-card p {
-            word-wrap: break-word;
-            overflow-wrap: break-word;
-        }
-
-        .btn {
-            text-decoration: none;
-            background: #75975e;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 30px;
-            font-size: 1rem;
-            transition: background 0.3s ease;
-            display: inline-block;
-            margin-top: 10px;
-        }
-
-        .btn:hover {
-            background: #c7DDB5;
-        }
-
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeIn 1s forwards ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @media (max-width: 768px) {
-
-            body {
-            background: #fafafa;
-            color: #333;
-            padding-top: 20px; /* Adjusted padding to account for the fixed navbar */
-            }
-            
-            .projects-grid {
-                grid-template-columns: 1fr; /* Ensures a single column layout on smaller screens */
-            }
-
-            .portfolio-title {
-                font-size: 2rem; /* Adjusting font size for smaller screens */
-            }
-
-            .portfolio-text {
-                font-size: 1rem; /* Adjusting font size for readability */
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-        }
-
-        /* Invisible scrollbar styling */
-        ::-webkit-scrollbar {
-            width: 0px;
-            background: transparent;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: transparent;
-        }
-    </style>
 </body>
 </html>
 
