--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal Website - Software Developer | Web Developer">
     <title>Libby Griffiths - Developer & Designer</title>
+    <link rel="stylesheet" href="assets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,128 +28,5 @@
             </div>
         </section>
     </div>
-
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Inter', sans-serif;
-    }
-
-    body {
-        background: #fafafa;
-        color: #333;
-        overflow-x: hidden;
-        padding-top: 60px; /* Prevent content from being hidden behind navigation */
-    }
-
-    .navigation {
-        display: flex;
-        justify-content: center;
-        gap: 30px;
-        margin-bottom: 20px;
-    }
-
-    .navigation a {
-        text-decoration: none;
-        color: #333;
-        font-weight: 500;
-        font-size: 1.2rem;
-        transition: color 0.3s ease;
-    }
-
-    .navigation a:hover {
-        color: #75975e;
-    }
-
-    .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 100vh;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .hero-content {
-        max-width: 600px;
-    }
-
-    .welcome {
-        font-size: 4rem;
-        font-family: 'Pacifico', cursive;
-        color: #75975e;
-        margin-bottom: 20px;
-    }
-
-    .profile-img {
-        width: 220px;
-        height: 220px;
-        border-radius: 50%;
-        object-fit: cover;
-        margin-bottom: 20px;
-    }
-
-    h2 {
-        font-size: 2.5rem;
-        font-weight: 700;
-        margin-bottom: 10px;
-    }
-
-    p {
-        font-size: 1.2rem;
-        margin-bottom: 20px;
-    }
-
-    .btn {
-        text-decoration: none;
-        background: #75975e;
-        color: white;
-        padding: 12px 25px;
-        border-radius: 30px;
-        font-size: 1.2rem;
-        transition: background 0.3s ease;
-    }
-
-    .btn:hover {
-        background: #c7DDB5;
-    }
-
-    @media (max-width: 768px) {
-        .navigation {
-            gap: 20px;
-        }
-
-        .welcome {
-            font-size: 3rem;
-        }
-
-        .profile-img {
-            width: 180px;
-            height: 180px;
-        }
-
-        h2 {
-            font-size: 2rem;
-        }
-
-        p {
-            font-size: 1rem;
-            padding-right: 20px;
-            padding-left: 20px;
-        }
-
-        .btn {
-            font-size: 1rem;
-            padding: 10px 20px;
-        }
-    }
-    @media (min-width: 1024px) {
-    body {
-        overflow: hidden; /* Hide scroll bar on desktop */
-    }
-}
-</style>
 </body>
 </html>
