--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="profile.jpg" alt="Libby Griffiths" class="profile-img">
                 <h2>Hi, I'm Libby Griffiths</h2>
                 <p>A passionate software engineer with a drive for innovation, I specialize in building high-performance systems and solutions that push the boundaries of technology. With a strong foundation in Object-Oriented Programming and agile development.</p>
-                <a href="portfolio.html"> class="btn">View My Work</a>
+                <a href="portfolio.html" class="btn">View My Work</a>
             </div>
         </section>
     </div>
