--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 <div class="project-card">
                     <img src="BotanicBuddy.jpg" alt="Botanic Buddy">
                     <h3>Botanic Buddy</h3>
-                    <p>Botanic Buddy is a mobile app that helps users identify plants using their phone's camera and provides personalized care instructions. It leverages the Plant.id API for plant recognition and includes features like a plant care calendar, a news feed, user settings, and a saved plants feature. Key skills for developing Botanic Buddy include React Native & Expo for cross-platform development, API integration, UI/UX design, authentication, state management, push notifications, calendar integration, and version control with Git and GitHub.</p>
+                    <p>Botanic Buddy is a mobile app that helps users identify plants using their phone's camera and provides personalized care instructions.</p>
                     <a href="#https://github.com/Libby358/BotanicBuddy" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
