--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                     <img src="BotanicBuddy.jpg" alt="Botanic Buddy">
                     <h3>Botanic Buddy</h3>
                     <p>Botanic Buddy is a mobile app that helps users identify plants using their phone's camera and provides personalized care instructions.</p>
-                    <a href="#https://github.com/Libby358/BotanicBuddy" class="btn">View Project</a>
+                    <a href="https://github.com/Libby358/BotanicBuddy" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
                     <img src="project2.jpg" alt="Project 2">
