img fix - height

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             
             <div class="projects-grid fade-in">
                 <div class="project-card">
-                    <img src="BotanicBuddy.JPG" alt="Botanic Buddy">
+                    <img src="BotanicBuddy.JPG" height="220px" alt="Botanic Buddy">
                     <h3>Botanic Buddy</h3>
                     <p>Botanic Buddy is a mobile app that helps users identify plants using their phone's camera and provides personalized care instructions.</p>
                     <a href="https://github.com/Libby358/BotanicBuddy" class="btn">View Project</a>
