--- a/portfolio.html
+++ b/portfolio.html
@@ -24,16 +24,16 @@
             
             <div class="projects-grid fade-in">
                 <div class="project-card">
-                    <img src="BotanicBuddy.JPG" height="220px" alt="Botanic Buddy">
+                    <img src="BotanicBuddy.JPG" alt="Botanic Buddy">
                     <h3>Botanic Buddy</h3>
                     <p>Botanic Buddy is a mobile app that helps users identify plants using their phone's camera and provides personalized care instructions.</p>
                     <a href="https://github.com/Libby358/BotanicBuddy" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="project2.jpg" alt="Project 2">
-                    <h3>Project Two</h3>
-                    <p>A mobile-friendly e-commerce platform with seamless user experience.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <img src="TaskFlow.jpg" alt="TaskFlow">
+                    <h3>TaskFlow</h3>
+                    <p>TaskFlow is a powerful and user-friendly task management web application built using ASP.NET Core and Blazor.</p>
+                    <a href="https://github.com/Libby358/TaskFlow" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
                     <img src="project3.jpg" alt="Project 3">
