--- a/portfolio.html
+++ b/portfolio.html
@@ -30,16 +30,16 @@
                     <a href="https://github.com/Libby358/BotanicBuddy" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="TaskFlow.jpg" alt="TaskFlow">
+                    <img src="TaskFlow.jpg" height="220px" alt="TaskFlow">
                     <h3>TaskFlow</h3>
                     <p>TaskFlow is a powerful and user-friendly task management web application built using ASP.NET Core and Blazor.</p>
                     <a href="https://github.com/Libby358/TaskFlow" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="project3.jpg" alt="Project 3">
-                    <h3>Project Three</h3>
-                    <p>An AI-powered chatbot that enhances customer interactions.</p>
-                    <a href="#" class="btn">View Project</a>
+                    <img src="DissertationProject.jpg" height="220px" alt="Dissertation Project">
+                    <h3>Dissertation Project</h3>
+                    <p>A User Friendly AI-powered Carbon Tracking app that offers personalized goals based and provide action based insight.</p>
+                    <a href="https://github.com/Libby358/DissertationProject" class="btn">View Project</a>
                 </div>
             </div>
         </section>
