Changing the portfolio projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,22 +24,22 @@
             
             <div class="projects-grid fade-in">
                 <div class="project-card">
-                    <img src="BotanicBuddy.JPG" alt="Botanic Buddy">
-                    <h3>Botanic Buddy</h3>
-                    <p>Botanic Buddy is a mobile app that helps users identify plants using their phone's camera and provides personalized care instructions.</p>
-                    <a href="https://github.com/Libby358/BotanicBuddy" class="btn">View Project</a>
+                    <img src="chess-game.jpg" alt="Chess Game">
+                    <h3>Chess Game</h3>
+                    <p>A strategic two-player game where the user competes against the computer, aiming to checkmate the opponent's king using tactical and strategic moves. The game follows standard chess rules, with the computer making intelligent decisions based on an AI algorithm.</p>
+                    <a href="https://github.com/Libby358/Chess-Game" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="TaskFlow.jpg" height="220px" alt="TaskFlow">
-                    <h3>TaskFlow</h3>
-                    <p>TaskFlow is a powerful and user-friendly task management web application built using ASP.NET Core and Blazor.</p>
-                    <a href="https://github.com/Libby358/TaskFlow" class="btn">View Project</a>
+                    <img src="telemetry-pro.jpg" alt="TelemetryPro">
+                    <h3>TelemetryPro – Motorsport Data Analyzer</h3>
+                    <p>TelemetryPro is a high-performance Windows application for analyzing race car telemetry data in real-time. Built with C#, .NET, and WPF (MVVM), it enables engineers to visualize and optimize vehicle performance using real-time data feeds.</p>
+                    <a href="https://github.com/Libby358/TelemetryPro-Motorsport-Data-Analyzer" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="DissertationProject.jpg" height="220px" alt="Dissertation Project">
-                    <h3>Dissertation Project</h3>
-                    <p>A User Friendly AI-powered Carbon Tracking app that offers personalized goals based and provide action based insight.</p>
-                    <a href="https://github.com/Libby358/DissertationProject" class="btn">View Project</a>
+                    <img src="task-management-app.jpg" alt="Task Management App">
+                    <h3>Task Management App</h3>
+                    <p>The Task Management App is a web-based application that allows users to create, organize, and track their tasks. This full-stack application demonstrates modern web development practices and responsive design principles.</p>
+                    <a href="https://github.com/Libby358/Task-Management-App" class="btn">View Project</a>
                 </div>
             </div>
         </section>
