Place holder images

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,13 @@
             
             <div class="projects-grid fade-in">
                 <div class="project-card">
-                    <img src="chess-game.jpg" alt="Chess Game">
+                    <img src="chess-game-svg.svg" alt="Chess Game">
                     <h3>Chess Game</h3>
                     <p>A strategic two-player game where the user competes against the computer, aiming to checkmate the opponent's king using tactical and strategic moves. The game follows standard chess rules, with the computer making intelligent decisions based on an AI algorithm.</p>
                     <a href="https://github.com/Libby358/Chess-Game" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="telemetry-pro.jpg" alt="TelemetryPro">
+                    <img src="telemetry-pro-svg.svg" alt="TelemetryPro">
                     <h3>TelemetryPro – Motorsport Data Analyzer</h3>
                     <p>TelemetryPro is a high-performance Windows application for analyzing race car telemetry data in real-time. Built with C#, .NET, and WPF (MVVM), it enables engineers to visualize and optimize vehicle performance using real-time data feeds.</p>
                     <a href="https://github.com/Libby358/TelemetryPro-Motorsport-Data-Analyzer" class="btn">View Project</a>
