Place holder images

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                     <a href="https://github.com/Libby358/TelemetryPro-Motorsport-Data-Analyzer" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="task-management-app.jpg" alt="Task Management App">
+                    <img src="task-management-svg.svg" alt="Task Management App">
                     <h3>Task Management App</h3>
                     <p>The Task Management App is a web-based application that allows users to create, organize, and track their tasks. This full-stack application demonstrates modern web development practices and responsive design principles.</p>
                     <a href="https://github.com/Libby358/Task-Management-App" class="btn">View Project</a>
