Making some changes to my portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,16 +24,16 @@
             
             <div class="projects-grid fade-in">
                 <div class="project-card">
-                    <img src="chess-game-svg.svg" alt="Chess Game">
-                    <h3>Chess Game</h3>
-                    <p>A strategic two-player game where the user competes against the computer, aiming to checkmate the opponent's king using tactical and strategic moves. The game follows standard chess rules, with the computer making intelligent decisions based on an AI algorithm.</p>
-                    <a href="https://github.com/Libby358/Chess-Game" class="btn">View Project</a>
+                    <img src="BotanicBuddy.JPG" alt="BotanicBuddy">
+                    <h3>Botanic Buddy</h3>
+                    <p>Botanic Buddy is a mobile and web application that helps users identify plants using AI-powered image recognition. By leveraging advanced AI APIs, the app provides accurate plant identification and detailed care instruction.</p>
+                    <a href="https://github.com/Libby358/BotanicBuddy" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="telemetry-pro-svg.svg" alt="TelemetryPro">
-                    <h3>TelemetryPro – Motorsport Data Analyzer</h3>
-                    <p>TelemetryPro is a high-performance Windows application for analyzing race car telemetry data in real-time. Built with C#, .NET, and WPF (MVVM), it enables engineers to visualize and optimize vehicle performance using real-time data feeds.</p>
-                    <a href="https://github.com/Libby358/TelemetryPro-Motorsport-Data-Analyzer" class="btn">View Project</a>
+                    <img src="telemetry-pro-svg.svg" alt="F1-Dashboard">
+                    <h3>F1 F1-Dashboard</h3>
+                    <p>F1 Dashboard is a comprehensive application that provides real-time and historical Formula 1 data, offering fans and analysts an in-depth look into every race. The dashboard integrates multiple data sources to display race insights.</p>
+                    <a href="https://github.com/Libby358/F1-Dashboard" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
                     <img src="task-management-svg.svg" alt="Task Management App">
