--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="project-card">
                     <img src="telemetry-pro-svg.svg" alt="F1-Dashboard">
-                    <h3>F1 F1-Dashboard</h3>
+                    <h3>F1 Dashboard</h3>
                     <p>F1 Dashboard is a comprehensive application that provides real-time and historical Formula 1 data, offering fans and analysts an in-depth look into every race. The dashboard integrates multiple data sources to display race insights.</p>
                     <a href="https://github.com/Libby358/F1-Dashboard" class="btn">View Project</a>
                 </div>
