Adding chess code

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,13 +34,15 @@
                     <a href="https://github.com/Libby358/F1-Dashboard" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <h3>Task Management App</h3>
-                    <p>The Task Management App is a web-based application that allows users to create, organize, and track their tasks. This full-stack application demonstrates modern web development practices and responsive design principles.</p>
-                    <a href="https://github.com/Libby358/Task-Management-App" class="btn">View Project</a>
+                    <h3>Chess Board Game</h3>
+                    <p>A fully-featured interactive chess game built with vanilla JavaScript, HTML5, and CSS3. Features complete chess rule implementation including castling and en passant, drag-and-drop gameplay, AI opponents with multiple difficulty levels, and a modern glassmorphism UI design with responsive mobile support.</p>
+                    <div class="project-buttons">
+                        <a href="https://github.com/Libby358/ChessBoard" class="btn">View Code</a>
+                        <a href="https://libby358.github.io/ChessBoard/" class="btn btn-secondary">Play Live</a>
+                    </div>
                 </div>
             </div>
         </section>
     </div>
 </body>
 </html>
-
