Adding the f1 dahsboard to my portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
                 </div>
                 <div class="project-card">
                     <h3>F1 Dashboard</h3>
-                    <p>F1 Dashboard is a comprehensive application that provides real-time and historical Formula 1 data, offering fans and analysts an in-depth look into every race. The dashboard integrates multiple data sources to display race insights.</p>
-                    <a href="https://github.com/Libby358/F1-Dashboard" class="btn">View Project</a>
+                    <p>This is a comprehensive Formula 1 Analytics Dashboard built with Python, featuring a sophisticated Tkinter GUI with custom theming and responsive design. The application integrates FastF1 API for real-time F1 data processing, implements matplotlib visualizations for telemetry analysis, and includes multi-threaded data loading with caching optimization.</p>
+                    <a href="https://github.com/Libby358/F1_Dashboard" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
                     <h3>Chess Board Game</h3>
